<resources>
    <string name="app_name">WanAndroid</string>
    <string name="str_nick_name">用户名</string>
    <string name="str_pwd">密码</string>
    <string name="str_pwd_again">再次输入密码</string>
    <string name="str_register_save">注册</string>
    <string name="str_net_error">网络异常,请重试</string>
    <string name="str_register_failured">注册失败</string>
    <string name="str_please_input_nick">请填写昵称</string>
    <string name="str_input_pwd">请填写密码</string>
    <string name="str_input_pwd_again">请再一次填写密码</string>
    <string name="str_register_success">注册用户成功</string>
    <string name="str_login">登陆</string>
    <string name="str_login_suceess">登陆成功</string>
    <string name="str_login_nick_empty">用户名不能为空</string>
    <string name="str_login_pwd_error">密码不能为空</string>
    <string name="or">Or</string>

    <string name="knowledge_hierarchy">知识体系</string>
    <string name="wx_article">公众号</string>
    <string name="home_pager">首页</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>


    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="str_collection">收藏</string>
    <string name="str_setting">设置</string>
    <string name="str_about_us">关于我们</string>
</resources>
