<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:minHeight="?android:attr/actionBarSize"
            android:layout_height="?android:attr/actionBarSize"
            app:navigationIcon="@mipmap/icon_arrow_back"
            app:title="标题"
            app:subtitle="副标题"
            app:titleMarginStart="20dp"
            android:background="@color/colorPrimary">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Title"
                android:textSize="16sp"
                android:textColor="@color/color_222222"/>

    </android.support.v7.widget.Toolbar>

    <EditText
            android:maxLength="20"
            android:id="@+id/et_register_nick"
            android:gravity="center"
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_50"
            tools:text="Nick Name"
            android:hint="@string/str_nick_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/dp_100"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>


    <EditText
            android:maxLength="20"
            android:gravity="center"
            android:id="@+id/et_register_pwd"
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_50"
            tools:text="Pwd"
            android:hint="@string/str_pwd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/dp_20"
            app:layout_constraintTop_toBottomOf="@+id/et_register_nick"/>


    <EditText
            android:maxLength="20"
            android:gravity="center"
            android:id="@+id/et_register_pwd_again"
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_50"
            tools:text="Pwd Again"
            android:hint="@string/str_pwd_again"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/dp_20"
            app:layout_constraintTop_toBottomOf="@+id/et_register_pwd"/>


    <android.support.v7.widget.AppCompatButton
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/et_register_pwd_again"
            android:onClick="register"
            android:gravity="center"
            android:id="@+id/btn_register_save"
            android:text="@string/str_register_save"
            android:layout_marginTop="@dimen/dp_40"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"/>

</LinearLayout>