<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

    <include layout="@layout/layout_toolbar"/>

    <ImageView
            android:id="@+id/iv_login_account"
            android:layout_marginLeft="@dimen/dp_80"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_login_nick"
            app:layout_constraintBottom_toBottomOf="@+id/et_login_nick"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:src="@drawable/ic_account"
            android:contentDescription="@null"/>

    <EditText
            style="@style/style_circle_edit"
            android:maxLength="20"
            android:id="@+id/et_login_nick"
            android:gravity="center_vertical|left"
            android:layout_width="@dimen/dp_260"
            android:layout_height="@dimen/dp_50"
            tools:text="Nick Name"
            android:hint="@string/str_nick_name"
            app:layout_constraintLeft_toRightOf="@+id/iv_login_account"
            android:layout_marginTop="@dimen/dp_30"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <View style="@style/style_line"
          app:layout_constraintRight_toRightOf="@id/btn_login"
          app:layout_constraintLeft_toLeftOf="@+id/iv_login_account"
          app:layout_constraintTop_toBottomOf="@+id/iv_login_account"
          android:layout_marginTop="@dimen/dp_10"/>


    <ImageView
            android:id="@+id/iv_login_pwd"
            android:layout_marginLeft="@dimen/dp_80"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_login_pwd"
            app:layout_constraintBottom_toBottomOf="@+id/et_login_pwd"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:src="@drawable/ic_password"
            android:contentDescription="@null"/>


    <EditText
            style="@style/style_circle_edit"
            android:maxLength="20"
            android:gravity="center_vertical|left"
            android:id="@+id/et_login_pwd"
            android:layout_width="@dimen/dp_260"
            android:layout_height="@dimen/dp_50"
            tools:text="Pwd"
            android:hint="@string/str_pwd"
            app:layout_constraintLeft_toRightOf="@+id/iv_login_pwd"
            android:layout_marginTop="@dimen/dp_20"
            app:layout_constraintTop_toBottomOf="@+id/et_login_nick"/>


    <View style="@style/style_line"
          app:layout_constraintLeft_toLeftOf="@+id/iv_login_pwd"
          app:layout_constraintTop_toBottomOf="@+id/iv_login_pwd"
          app:layout_constraintRight_toRightOf="@id/btn_login"
          android:layout_marginTop="@dimen/dp_10"/>

    <!--<android.support.constraint.Guideline-->
    <!--app:layout_constraintGuide_percent="0.5"-->
    <!--android:orientation="vertical"-->
    <!--android:id="@+id/gl_login_guide"-->
    <!--android:background="@color/colorPrimaryDark"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"/>-->


    <Button
            app:layout_constraintTop_toBottomOf="@+id/et_login_pwd"
            style="@style/style_circle_btn"
            android:background="@drawable/bg_conner_bottom_red"
            android:onClick="register"
            android:gravity="center"
            android:id="@+id/btn_login"
            android:text="@string/str_login"
            android:layout_marginTop="@dimen/dp_40"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>


    <TextView
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            android:id="@+id/login_or_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/color_5b5d5c"
            android:textSize="@dimen/sp_16"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_12"/>

    <Button
            style="@style/style_circle_btn"
            app:layout_constraintTop_toBottomOf="@+id/login_or_tv"
            android:onClick="register"
            android:gravity="center"
            android:id="@+id/btn_login_register"
            android:text="@string/str_register_save"
            android:background="@drawable/bg_conner_bottom_blue"
            android:layout_marginTop="@dimen/dp_12"
            app:layout_constraintRight_toRightOf="parent"/>


</android.support.constraint.ConstraintLayout>